parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMP
    DIFERENTE
    ENTAO
    FUNCTION_ID
    IGUAL
    MAIOR
    MENOR
    ZERO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcao bloco
Rule 2     funcao -> INTEIRO ID LPAREN parametros RPAREN DOT
Rule 3     parametros -> parametro
Rule 4     parametros -> parametro COMMA parametros
Rule 5     parametro -> INTEIRO ID
Rule 6     bloco -> INICIO DOT comandos FIM DOT
Rule 7     comandos -> comando
Rule 8     comandos -> comando comandos
Rule 9     comando -> ID EQUALS expressao DOT
Rule 10    comando -> ELGIO EQUALS expressao DOT
Rule 11    comando -> SE expressao DOT comando senao_opcional FIM DOT
Rule 12    senao_opcional -> SENAO DOT comando
Rule 13    senao_opcional -> vazio
Rule 14    expressao -> expressao PLUS expressao
Rule 15    expressao -> expressao MINUS expressao
Rule 16    expressao -> expressao TIMES expressao
Rule 17    expressao -> expressao DIVIDE expressao
Rule 18    expressao -> expressao GT expressao
Rule 19    expressao -> expressao LT expressao
Rule 20    expressao -> expressao EQUALS expressao
Rule 21    expressao -> ID
Rule 22    expressao -> NUMBER
Rule 23    vazio -> <empty>

Terminals, with rules where they appear

COMMA                : 4
COMP                 : 
DIFERENTE            : 
DIVIDE               : 17
DOT                  : 2 6 6 9 10 11 11 12
ELGIO                : 10
ENTAO                : 
EQUALS               : 9 10 20
FIM                  : 6 11
FUNCTION_ID          : 
GT                   : 18
ID                   : 2 5 9 21
IGUAL                : 
INICIO               : 6
INTEIRO              : 2 5
LPAREN               : 2
LT                   : 19
MAIOR                : 
MENOR                : 
MINUS                : 15
NUMBER               : 22
PLUS                 : 14
RPAREN               : 2
SE                   : 11
SENAO                : 12
TIMES                : 16
ZERO                 : 
error                : 

Nonterminals, with rules where they appear

bloco                : 1
comando              : 7 8 11 12
comandos             : 6 8
expressao            : 9 10 11 14 14 15 15 16 16 17 17 18 18 19 19 20 20
funcao               : 1
parametro            : 3 4
parametros           : 2 4
programa             : 0
senao_opcional       : 11
vazio                : 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcao bloco
    (2) funcao -> . INTEIRO ID LPAREN parametros RPAREN DOT

    INTEIRO         shift and go to state 3

    programa                       shift and go to state 1
    funcao                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcao . bloco
    (6) bloco -> . INICIO DOT comandos FIM DOT

    INICIO          shift and go to state 5

    bloco                          shift and go to state 4

state 3

    (2) funcao -> INTEIRO . ID LPAREN parametros RPAREN DOT

    ID              shift and go to state 6


state 4

    (1) programa -> funcao bloco .

    $end            reduce using rule 1 (programa -> funcao bloco .)


state 5

    (6) bloco -> INICIO . DOT comandos FIM DOT

    DOT             shift and go to state 7


state 6

    (2) funcao -> INTEIRO ID . LPAREN parametros RPAREN DOT

    LPAREN          shift and go to state 8


state 7

    (6) bloco -> INICIO DOT . comandos FIM DOT
    (7) comandos -> . comando
    (8) comandos -> . comando comandos
    (9) comando -> . ID EQUALS expressao DOT
    (10) comando -> . ELGIO EQUALS expressao DOT
    (11) comando -> . SE expressao DOT comando senao_opcional FIM DOT

    ID              shift and go to state 11
    ELGIO           shift and go to state 12
    SE              shift and go to state 13

    comandos                       shift and go to state 9
    comando                        shift and go to state 10

state 8

    (2) funcao -> INTEIRO ID LPAREN . parametros RPAREN DOT
    (3) parametros -> . parametro
    (4) parametros -> . parametro COMMA parametros
    (5) parametro -> . INTEIRO ID

    INTEIRO         shift and go to state 14

    parametros                     shift and go to state 15
    parametro                      shift and go to state 16

state 9

    (6) bloco -> INICIO DOT comandos . FIM DOT

    FIM             shift and go to state 17


state 10

    (7) comandos -> comando .
    (8) comandos -> comando . comandos
    (7) comandos -> . comando
    (8) comandos -> . comando comandos
    (9) comando -> . ID EQUALS expressao DOT
    (10) comando -> . ELGIO EQUALS expressao DOT
    (11) comando -> . SE expressao DOT comando senao_opcional FIM DOT

    FIM             reduce using rule 7 (comandos -> comando .)
    ID              shift and go to state 11
    ELGIO           shift and go to state 12
    SE              shift and go to state 13

    comando                        shift and go to state 10
    comandos                       shift and go to state 18

state 11

    (9) comando -> ID . EQUALS expressao DOT

    EQUALS          shift and go to state 19


state 12

    (10) comando -> ELGIO . EQUALS expressao DOT

    EQUALS          shift and go to state 20


state 13

    (11) comando -> SE . expressao DOT comando senao_opcional FIM DOT
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 21

state 14

    (5) parametro -> INTEIRO . ID

    ID              shift and go to state 24


state 15

    (2) funcao -> INTEIRO ID LPAREN parametros . RPAREN DOT

    RPAREN          shift and go to state 25


state 16

    (3) parametros -> parametro .
    (4) parametros -> parametro . COMMA parametros

    RPAREN          reduce using rule 3 (parametros -> parametro .)
    COMMA           shift and go to state 26


state 17

    (6) bloco -> INICIO DOT comandos FIM . DOT

    DOT             shift and go to state 27


state 18

    (8) comandos -> comando comandos .

    FIM             reduce using rule 8 (comandos -> comando comandos .)


state 19

    (9) comando -> ID EQUALS . expressao DOT
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 28

state 20

    (10) comando -> ELGIO EQUALS . expressao DOT
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 29

state 21

    (11) comando -> SE expressao . DOT comando senao_opcional FIM DOT
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

    DOT             shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37


state 22

    (21) expressao -> ID .

    DOT             reduce using rule 21 (expressao -> ID .)
    PLUS            reduce using rule 21 (expressao -> ID .)
    MINUS           reduce using rule 21 (expressao -> ID .)
    TIMES           reduce using rule 21 (expressao -> ID .)
    DIVIDE          reduce using rule 21 (expressao -> ID .)
    GT              reduce using rule 21 (expressao -> ID .)
    LT              reduce using rule 21 (expressao -> ID .)
    EQUALS          reduce using rule 21 (expressao -> ID .)


state 23

    (22) expressao -> NUMBER .

    DOT             reduce using rule 22 (expressao -> NUMBER .)
    PLUS            reduce using rule 22 (expressao -> NUMBER .)
    MINUS           reduce using rule 22 (expressao -> NUMBER .)
    TIMES           reduce using rule 22 (expressao -> NUMBER .)
    DIVIDE          reduce using rule 22 (expressao -> NUMBER .)
    GT              reduce using rule 22 (expressao -> NUMBER .)
    LT              reduce using rule 22 (expressao -> NUMBER .)
    EQUALS          reduce using rule 22 (expressao -> NUMBER .)


state 24

    (5) parametro -> INTEIRO ID .

    COMMA           reduce using rule 5 (parametro -> INTEIRO ID .)
    RPAREN          reduce using rule 5 (parametro -> INTEIRO ID .)


state 25

    (2) funcao -> INTEIRO ID LPAREN parametros RPAREN . DOT

    DOT             shift and go to state 38


state 26

    (4) parametros -> parametro COMMA . parametros
    (3) parametros -> . parametro
    (4) parametros -> . parametro COMMA parametros
    (5) parametro -> . INTEIRO ID

    INTEIRO         shift and go to state 14

    parametro                      shift and go to state 16
    parametros                     shift and go to state 39

state 27

    (6) bloco -> INICIO DOT comandos FIM DOT .

    $end            reduce using rule 6 (bloco -> INICIO DOT comandos FIM DOT .)


state 28

    (9) comando -> ID EQUALS expressao . DOT
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

    DOT             shift and go to state 40
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37


state 29

    (10) comando -> ELGIO EQUALS expressao . DOT
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

    DOT             shift and go to state 41
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37


state 30

    (11) comando -> SE expressao DOT . comando senao_opcional FIM DOT
    (9) comando -> . ID EQUALS expressao DOT
    (10) comando -> . ELGIO EQUALS expressao DOT
    (11) comando -> . SE expressao DOT comando senao_opcional FIM DOT

    ID              shift and go to state 11
    ELGIO           shift and go to state 12
    SE              shift and go to state 13

    comando                        shift and go to state 42

state 31

    (14) expressao -> expressao PLUS . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 43

state 32

    (15) expressao -> expressao MINUS . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 44

state 33

    (16) expressao -> expressao TIMES . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 45

state 34

    (17) expressao -> expressao DIVIDE . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 46

state 35

    (18) expressao -> expressao GT . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 47

state 36

    (19) expressao -> expressao LT . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 48

state 37

    (20) expressao -> expressao EQUALS . expressao
    (14) expressao -> . expressao PLUS expressao
    (15) expressao -> . expressao MINUS expressao
    (16) expressao -> . expressao TIMES expressao
    (17) expressao -> . expressao DIVIDE expressao
    (18) expressao -> . expressao GT expressao
    (19) expressao -> . expressao LT expressao
    (20) expressao -> . expressao EQUALS expressao
    (21) expressao -> . ID
    (22) expressao -> . NUMBER

    ID              shift and go to state 22
    NUMBER          shift and go to state 23

    expressao                      shift and go to state 49

state 38

    (2) funcao -> INTEIRO ID LPAREN parametros RPAREN DOT .

    INICIO          reduce using rule 2 (funcao -> INTEIRO ID LPAREN parametros RPAREN DOT .)


state 39

    (4) parametros -> parametro COMMA parametros .

    RPAREN          reduce using rule 4 (parametros -> parametro COMMA parametros .)


state 40

    (9) comando -> ID EQUALS expressao DOT .

    ID              reduce using rule 9 (comando -> ID EQUALS expressao DOT .)
    ELGIO           reduce using rule 9 (comando -> ID EQUALS expressao DOT .)
    SE              reduce using rule 9 (comando -> ID EQUALS expressao DOT .)
    FIM             reduce using rule 9 (comando -> ID EQUALS expressao DOT .)
    SENAO           reduce using rule 9 (comando -> ID EQUALS expressao DOT .)


state 41

    (10) comando -> ELGIO EQUALS expressao DOT .

    ID              reduce using rule 10 (comando -> ELGIO EQUALS expressao DOT .)
    ELGIO           reduce using rule 10 (comando -> ELGIO EQUALS expressao DOT .)
    SE              reduce using rule 10 (comando -> ELGIO EQUALS expressao DOT .)
    FIM             reduce using rule 10 (comando -> ELGIO EQUALS expressao DOT .)
    SENAO           reduce using rule 10 (comando -> ELGIO EQUALS expressao DOT .)


state 42

    (11) comando -> SE expressao DOT comando . senao_opcional FIM DOT
    (12) senao_opcional -> . SENAO DOT comando
    (13) senao_opcional -> . vazio
    (23) vazio -> .

    SENAO           shift and go to state 51
    FIM             reduce using rule 23 (vazio -> .)

    senao_opcional                 shift and go to state 50
    vazio                          shift and go to state 52

state 43

    (14) expressao -> expressao PLUS expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 14 (expressao -> expressao PLUS expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! MINUS           [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! TIMES           [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! DIVIDE          [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! GT              [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! LT              [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]
  ! EQUALS          [ reduce using rule 14 (expressao -> expressao PLUS expressao .) ]


state 44

    (15) expressao -> expressao MINUS expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 15 (expressao -> expressao MINUS expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! MINUS           [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! TIMES           [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! DIVIDE          [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! GT              [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! LT              [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]
  ! EQUALS          [ reduce using rule 15 (expressao -> expressao MINUS expressao .) ]


state 45

    (16) expressao -> expressao TIMES expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 16 (expressao -> expressao TIMES expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! MINUS           [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! TIMES           [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! DIVIDE          [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! GT              [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! LT              [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]
  ! EQUALS          [ reduce using rule 16 (expressao -> expressao TIMES expressao .) ]


state 46

    (17) expressao -> expressao DIVIDE expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 17 (expressao -> expressao DIVIDE expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! MINUS           [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! TIMES           [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! DIVIDE          [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! GT              [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! LT              [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]
  ! EQUALS          [ reduce using rule 17 (expressao -> expressao DIVIDE expressao .) ]


state 47

    (18) expressao -> expressao GT expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 18 (expressao -> expressao GT expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! MINUS           [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! TIMES           [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! DIVIDE          [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! GT              [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! LT              [ reduce using rule 18 (expressao -> expressao GT expressao .) ]
  ! EQUALS          [ reduce using rule 18 (expressao -> expressao GT expressao .) ]


state 48

    (19) expressao -> expressao LT expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 19 (expressao -> expressao LT expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! MINUS           [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! TIMES           [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! DIVIDE          [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! GT              [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! LT              [ reduce using rule 19 (expressao -> expressao LT expressao .) ]
  ! EQUALS          [ reduce using rule 19 (expressao -> expressao LT expressao .) ]


state 49

    (20) expressao -> expressao EQUALS expressao .
    (14) expressao -> expressao . PLUS expressao
    (15) expressao -> expressao . MINUS expressao
    (16) expressao -> expressao . TIMES expressao
    (17) expressao -> expressao . DIVIDE expressao
    (18) expressao -> expressao . GT expressao
    (19) expressao -> expressao . LT expressao
    (20) expressao -> expressao . EQUALS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    DOT             reduce using rule 20 (expressao -> expressao EQUALS expressao .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    GT              shift and go to state 35
    LT              shift and go to state 36
    EQUALS          shift and go to state 37

  ! PLUS            [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! MINUS           [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! TIMES           [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! DIVIDE          [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! GT              [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! LT              [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]
  ! EQUALS          [ reduce using rule 20 (expressao -> expressao EQUALS expressao .) ]


state 50

    (11) comando -> SE expressao DOT comando senao_opcional . FIM DOT

    FIM             shift and go to state 53


state 51

    (12) senao_opcional -> SENAO . DOT comando

    DOT             shift and go to state 54


state 52

    (13) senao_opcional -> vazio .

    FIM             reduce using rule 13 (senao_opcional -> vazio .)


state 53

    (11) comando -> SE expressao DOT comando senao_opcional FIM . DOT

    DOT             shift and go to state 55


state 54

    (12) senao_opcional -> SENAO DOT . comando
    (9) comando -> . ID EQUALS expressao DOT
    (10) comando -> . ELGIO EQUALS expressao DOT
    (11) comando -> . SE expressao DOT comando senao_opcional FIM DOT

    ID              shift and go to state 11
    ELGIO           shift and go to state 12
    SE              shift and go to state 13

    comando                        shift and go to state 56

state 55

    (11) comando -> SE expressao DOT comando senao_opcional FIM DOT .

    ID              reduce using rule 11 (comando -> SE expressao DOT comando senao_opcional FIM DOT .)
    ELGIO           reduce using rule 11 (comando -> SE expressao DOT comando senao_opcional FIM DOT .)
    SE              reduce using rule 11 (comando -> SE expressao DOT comando senao_opcional FIM DOT .)
    FIM             reduce using rule 11 (comando -> SE expressao DOT comando senao_opcional FIM DOT .)
    SENAO           reduce using rule 11 (comando -> SE expressao DOT comando senao_opcional FIM DOT .)


state 56

    (12) senao_opcional -> SENAO DOT comando .

    FIM             reduce using rule 12 (senao_opcional -> SENAO DOT comando .)
